# marketscout

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Procfile  README.md  pyproject.toml  railway.toml  requirements.txt
data/: sample_strategy.json
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  RELEASE_CHECKLIST.md
src/marketscout/: __init__.py  __main__.py  bi_export.py  cache.py  cli.py  config.py  db.py  fs.py  interactive.py  leads.py  normalize.py
src/marketscout/app/: __init__.py
src/marketscout/backend/: __init__.py  email_sender.py  main.py  nl2sql.py  schema.py
src/marketscout/backend/ai/: __init__.py  report_html.py  report_md.py  strategy.py
src/marketscout/brain/: __init__.py  report_html.py  report_md.py  schema.py  strategy.py
src/marketscout/frontend/: app.py
src/marketscout/scout/: __init__.py  errors.py  headlines.py  jobs.py
src/marketscout/scout/providers/: __init__.py  adzuna.py  base.py  rss.py
src/marketscout/templates/: __init__.py  industries.py
tests/: __init__.py  conftest.py  test_action_generation.py  test_api.py  test_backend.py  test_backend_integrity.py  test_bi_export.py  test_cache.py  test_cli.py  test_cli_run.py  test_db.py  test_demo.py  test_headlines.py  test_interactive.py  test_jobs.py  test_lead_extraction.py  test_normalize.py  test_opportunity_identity.py  test_report_html.py  test_report_md.py  test_schema.py  test_scout.py  test_signal_quality.py  test_strategy.py  test_trend_quality.py
tests/fixtures/: sample_headlines.json  sample_jobs.json  sample_rss.xml  sample_strategy_v2.json
