[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketscout"
version = "1.2.0"
description = "MarketScout — Zero-Friction Strategy Engine (CLI). Live headlines + jobs → strategy.json, report.md, report.html"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "MarketScout" }]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "openai>=1.6.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "streamlit>=1.35.0",
    "langchain>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "langchain-community>=0.2.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-asyncio>=1.0.0"]

[project.scripts]
marketscout = "marketscout.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["marketscout*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
